# ESVIO

./: README.md
camera_model/: CMakeLists.txt
config/: ESIO.rviz  ESVIO.rviz  vins_rviz_config.rviz
config/esio/: esio.yaml  event0_esio.yaml
config/esio_DSEC/: esio.yaml  event0_esvio.yaml  event1_esvio.yaml
config/esvio/: cam0_esvio.yaml  esvio.yaml
config/esvio_DSEC/: cam0_esvio.yaml  cam1_esvio.yaml  esvio.yaml
config/esvio_VECtor/: cam0_esvio.yaml  cam1_esvio.yaml  esvio.yaml  event0_esvio.yaml  event1_esvio.yaml
config/esvio_VECtor_small_scale/: cam0_esvio.yaml  esvio.yaml  event0_esvio.yaml
config/esvio_ecmd/: cam0_esvio.yaml  cam1_esvio.yaml  esvio.yaml  event0_esvio.yaml  event1_esvio.yaml
config/esvio_mvsec_flying/: cam0_esvio.yaml  cam1_esvio.yaml  esvio.yaml  event0_esvio.yaml
dependences/events_repacking_helper/launch/: repacking.launch
dependences/events_repacking_helper/src/: EventMessageEditor.cpp
esvio_estimator/: CMakeLists.txt  package.xml
esvio_estimator/launch/: compressed_to_raw.launch  esio.launch  esio_DSEC.launch  esvio.launch  esvio_DSEC.launch  esvio_VECtor.launch  esvio_VECtor_small_scale.launch  esvio_ecmd.launch  esvio_mvsec_flying.launch  vins_rviz.launch
esvio_estimator/src/: esio_estimator_node.cpp  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h  stereo_estimator_node.cpp
esvio_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h
esvio_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h  solve_opt.cpp  solve_opt.h  translate_factor.cpp  translate_factor.h
esvio_estimator/src/utility/: visualization.cpp  visualization.h
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  parameters.cpp  parameters.h  stereo_event_tracker_node.cpp  stereo_image_tracker_node.cpp
feature_tracker/src/dvs_msgs/: Event.h  EventArray.h
feature_tracker/src/event_detector/: event_detector.cc  event_detector.h
feature_tracker/src/utility/: visualization.cpp  visualization.h
pose_graph/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
script/: run.sh
(+4 files in other folders)
